[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Art/Tako/Heart.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tako/TakoSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/StateMachineClass/StateMachineClass.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Tako/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Tako/States/Wander.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Tako/Tako.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Tako/States/Food.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Tako/Emotes.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 79.2944

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 55.06
flag_disable_z = true
spread = 106.94
angular_velocity = -5.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 3.0
angle_random = 0.77
scale = 0.2
scale_random = 0.31
color_ramp = SubResource( 3 )

[sub_resource type="CircleShape2D" id=5]
radius = 556.445

[sub_resource type="CircleShape2D" id=6]
radius = 77.4705

[node name="Tako" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2147483650
collision_mask = 3
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}
speed_max = 250.0
acceleration_max = 1000.0

[node name="TakoSprite" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17.027 )
shape = SubResource( 1 )

[node name="ParticleEmitter" type="Particles2D" parent="."]
position = Vector2( 0, 18.6878 )
scale = Vector2( 1.5, 1.5 )
emitting = false
amount = 5
lifetime = 1.5
one_shot = true
randomness = 0.34
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
margin = Vector2( 20, 20 )
arrival_tolerance = 90
deceleration_radius = 400

[node name="Food" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="SearchFood" type="Area2D" parent="."]
modulate = Color( 0.537255, 1, 0.509804, 0.458824 )
position = Vector2( 0, 16.6677 )
input_pickable = false
monitorable = false
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchFood"]
shape = SubResource( 5 )

[node name="EatArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatArea"]
position = Vector2( 0, 19.184 )
shape = SubResource( 6 )

[node name="Emotes" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -106.787 )
scale = Vector2( 1, 1 )

[node name="EatCD" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[node name="RemoteTakoUI" type="RemoteTransform2D" parent="."]
position = Vector2( 0, 103.38 )
update_scale = false
[connection signal="input_event" from="." to="." method="_on_Tako_input_event"]
[connection signal="body_entered" from="SearchFood" to="." method="_on_SearchFood_body_entered"]
[connection signal="body_entered" from="EatArea" to="." method="_on_EatArea_body_entered"]
[connection signal="timeout" from="EatCD" to="." method="_on_EatCD_timeout"]
